unpackaged/objects/MemberInfo__c.object
<CustomObject>
    <fields>
        <fullName>Security_PIC_Mobile__c</fullName>
        <formula>KeiyakuCompanyName__r.Security_PIC_Mobile__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>セキュリティ担当者携帯電話</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_PIC__c</fullName>
        <formula>KeiyakuCompanyName__r.Security_PIC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>セキュリティ担当者名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SeiKana__c</fullName>
        <label>姓（カナ）</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SeiMeiRoma__c</fullName>
        <formula>MeiRoma__c &amp; &quot; &quot; &amp;  SeiRoma__c</formula>
        <label>姓名（ローマ字）</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SeiRoma__c</fullName>
        <label>姓（ローマ字）</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceAreaCd__c</fullName>
        <formula>CASE( KeiyakuKeitai__c , 
&quot;法人／単身Global Plus Member&quot;,&quot;GP&quot;,
&quot;法人／家族Global Plus Member&quot;,&quot;GP&quot;,
&quot;個人／単身Global Plus Member&quot;,&quot;GP&quot;,
&quot;個人／家族Global Plus Member&quot;,&quot;GP&quot;,
&quot;法人／単身Global Member&quot;,&quot;G&quot;,
&quot;法人／家族Global Member&quot;,&quot;G&quot;,
&quot;法人／無記名Biz Trip Pass&quot;,&quot;B&quot;,
&quot;法人／無記名Visitor Pass&quot;,&quot;V&quot;,
&quot;法人／単身Asian&quot;, &quot;A&quot;, 
&quot;法人／家族Asian&quot;, &quot;A&quot;, 
&quot;法人／無記名Asian&quot;, &quot;A&quot;, 
&quot;個人／単身Asian&quot;, &quot;A&quot;, 
&quot;個人／家族Asian&quot;, &quot;A&quot;, 
&quot;法人／単身&quot;, &quot;CB&quot;, 
&quot;法人／包括&quot;, &quot;&quot;,
&quot;法人／単身Asian B Plan&quot;, &quot;AB&quot;, 
&quot;法人／家族Asian B Plan&quot;, &quot;AB&quot;, 
&quot;法人／無記名Asian Biz Trip Plan&quot;, &quot;ABiz&quot;, 
&quot;C&quot;)</formula>
        <label>サービスエリアコード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceArea__c</fullName>
        <formula>CASE( ServiceAreaCd__c , 
&quot;C&quot;, &quot;C&amp;Vメンバー&quot;, 
&quot;&quot;)</formula>
        <label>サービスエリア</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceKeitaiCd__c</fullName>
        <formula>KeitaiCd__c  &amp;  ServiceAreaCd__c</formula>
        <label>サービス形態コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sex__c</fullName>
        <label>性別</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>男</fullName>
                </value>
                <value>
                    <fullName>女</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShokenGetSituation__c</fullName>
        <label>証券入手状況</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>未入手</fullName>
                </value>
                <value>
                    <fullName>取寄中</fullName>
                </value>
                <value>
                    <fullName>入手済</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShokenNo__c</fullName>
        <label>証券番号</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shonendo_Shiki__c</fullName>
        <inlineHelpText>現地医療保険のみ</inlineHelpText>
        <label>初年度始期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ShozokuAreaCd__c</fullName>
        <formula>CASE( ShozokuArea__c , 
&quot;北京&quot;,&quot;NBJ&quot;,
&quot;秦皇島&quot;,&quot;NQH&quot;,
&quot;河北省&quot;,&quot;NHB&quot;,
&quot;内モンゴル&quot;,&quot;NNM&quot;,
&quot;山西省&quot;,&quot;NSX&quot;,
&quot;天津&quot;,&quot;NTJ&quot;,
&quot;河南省&quot;,&quot;NHN&quot;,
&quot;株州&quot;,&quot;MZZ&quot;,
&quot;武漢&quot;,&quot;MWH&quot;,
&quot;湖南省&quot;,&quot;SHN&quot;,
&quot;青島&quot;,&quot;NQD&quot;,
&quot;山東省&quot;,&quot;NSD&quot;,
&quot;上海&quot;,&quot;MSH&quot;,
&quot;安徽省&quot;,&quot;MAH&quot;,
&quot;杭州&quot;,&quot;MHZ&quot;,
&quot;浙江省&quot;,&quot;MZJ&quot;,
&quot;寧波&quot;,&quot;MNB&quot;,
&quot;南通&quot;,&quot;MNT&quot;,
&quot;江蘇省&quot;,&quot;MJS&quot;,
&quot;蘇州&quot;,&quot;MSZ&quot;,
&quot;無錫&quot;,&quot;MWX&quot;,
&quot;常州&quot;,&quot;MCZ&quot;,
&quot;南京&quot;,&quot;MNJ&quot;,
&quot;昆山&quot;,&quot;MKS&quot;,
&quot;太倉&quot;,&quot;MTC&quot;,
&quot;厦門&quot;,&quot;SXM&quot;,
&quot;福州&quot;,&quot;SFZ&quot;,
&quot;福建省&quot;,&quot;SFJ&quot;,
&quot;江西&quot;,&quot;SJX&quot;,
&quot;東莞&quot;,&quot;SDG&quot;,
&quot;深セン&quot;,&quot;SSZ&quot;,
&quot;広東省&quot;,&quot;SGD&quot;,
&quot;海南省&quot;,&quot;SKN&quot;,
&quot;汕頭&quot;,&quot;SST&quot;,
&quot;恵州&quot;,&quot;SHZ&quot;,
&quot;広州&quot;,&quot;SGZ&quot;,
&quot;韶関&quot;,&quot;SSG&quot;,
&quot;広西&quot;,&quot;SGX&quot;,
&quot;佛山&quot;,&quot;SFS&quot;,
&quot;肇慶&quot;,&quot;ZQT&quot;,
&quot;珠海&quot;,&quot;SZH&quot;,
&quot;中山&quot;,&quot;SZS&quot;,
&quot;黒龍江省&quot;,&quot;NHL&quot;,
&quot;吉林省&quot;,&quot;NJL&quot;,
&quot;瀋陽&quot;,&quot;NSY&quot;,
&quot;大連&quot;,&quot;NDL&quot;,
&quot;遼寧省&quot;,&quot;NLN&quot;,
&quot;寧夏&quot;,&quot;MNX&quot;,
&quot;新疆&quot;,&quot;MXJ&quot;,
&quot;西安&quot;,&quot;MXA&quot;,
&quot;雲南省&quot;,&quot;MYN&quot;,
&quot;貴州&quot;,&quot;MGZ&quot;,
&quot;四川省&quot;,&quot;MSC&quot;,
&quot;重慶&quot;,&quot;MCQ&quot;,
&quot;成都&quot;,&quot;MCD&quot;,
&quot;香港&quot;,&quot;AHK&quot;,
&quot;ハノイ&quot;,&quot;VHN&quot;,
&quot;ホーチミン&quot;,&quot;VHC&quot;,
&quot;ハイフォン&quot;,&quot;VHP&quot;,
&quot;ダナン&quot;,&quot;VDN&quot;,
&quot;東京&quot;,&quot;ATK&quot;,
&quot;大阪&quot;,&quot;AOS&quot;,
&quot;常熟&quot;,&quot;MCS&quot;, 
&quot;張家港&quot;,&quot;MZJ&quot;, 
&quot;鄭州&quot;,&quot;NZZ&quot;,
&quot;襄樊&quot;,&quot;MXH&quot;,
&quot;十堰&quot;,&quot;MSX&quot;,
&quot;江門&quot;,&quot;SJM&quot;,
&quot;平湖&quot;,&quot;MPH&quot;,
&quot;長春&quot;,&quot;NCC&quot;,
&quot;煙台&quot;,&quot;NYT&quot;,
&quot;ZZZ&quot;)</formula>
        <label>所属地区コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShozokuArea__c</fullName>
        <label>所属地区</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Jurisdiction__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>北京</fullName>
                </value>
                <value>
                    <fullName>河北省</fullName>
                </value>
                <value>
                    <fullName>内モンゴル</fullName>
                </value>
                <value>
                    <fullName>山西省</fullName>
                </value>
                <value>
                    <fullName>河南省</fullName>
                </value>
                <value>
                    <fullName>天津</fullName>
                </value>
                <value>
                    <fullName>塘沽</fullName>
                </value>
                <value>
                    <fullName>青島</fullName>
                </value>
                <value>
                    <fullName>山東省</fullName>
                </value>
                <value>
                    <fullName>煙台</fullName>
                </value>
                <value>
                    <fullName>黒龍江省</fullName>
                </value>
                <value>
                    <fullName>吉林省</fullName>
                </value>
                <value>
                    <fullName>長春</fullName>
                </value>
                <value>
                    <fullName>瀋陽</fullName>
                </value>
                <value>
                    <fullName>大連</fullName>
                </value>
                <value>
                    <fullName>遼寧省</fullName>
                </value>
                <value>
                    <fullName>上海</fullName>
                </value>
                <value>
                    <fullName>寧夏</fullName>
                </value>
                <value>
                    <fullName>新疆</fullName>
                </value>
                <value>
                    <fullName>西安</fullName>
                </value>
                <value>
                    <fullName>雲南省</fullName>
                </value>
                <value>
                    <fullName>貴州</fullName>
                </value>
                <value>
                    <fullName>平湖</fullName>
                </value>
                <value>
                    <fullName>鄭州</fullName>
                </value>
                <value>
                    <fullName>杭州</fullName>
                </value>
                <value>
                    <fullName>浙江省</fullName>
                </value>
                <value>
                    <fullName>寧波</fullName>
                </value>
                <value>
                    <fullName>四川省</fullName>
                </value>
                <value>
                    <fullName>成都</fullName>
                </value>
                <value>
                    <fullName>重慶</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TaikaiBusho__c</fullName>
        <label>(退会後）部署</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaikaiDateAfterHalfYear__c</fullName>
        <formula>IF (  ISNULL(TaikaiDate__c)  = TRUE , &quot;-&quot;,  TEXT(DATE( YEAR(TaikaiDate__c) , MONTH(TaikaiDate__c) +6, DAY(TaikaiDate__c))))</formula>
        <label>退会半年後日付</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaikaiDate__c</fullName>
        <label>退会日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TaikaiDate_txt__c</fullName>
        <label>退会日付(テキスト)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TaikaiKinmuCompany__c</fullName>
        <label>(退会後）勤務先会社</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaikaiYakushoku__c</fullName>
        <label>(退会後）役職</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tanto__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>担当者の場合は、チェックをつけます。</inlineHelpText>
        <label>担当者</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tel__c</fullName>
        <inlineHelpText>入力する際は、
－（ハイフン）を抜いて入力して下さい。
例）　○0335380180
　　　×03-3538-0180</inlineHelpText>
        <label>TEL</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Test2__c</fullName>
        <formula>CASE( ServiceAreaCd__c , 
&quot;C&quot;, &quot;契約会社名&quot;, 
&quot;Company Name&quot;)</formula>
        <label>会員カード項目名1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TreatmentCost__c</fullName>
        <label>治療費用</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TreatmentRescueCost__c</fullName>
        <label>治療・救援者費用</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Web_ServiceAreaCd__c</fullName>
        <formula>CASE( KeiyakuKeitai__c , 
&quot;法人／単身China&quot;, &quot;China,中国,香港&quot;, 
&quot;法人／家族China&quot;, &quot;China,中国,香港&quot;, 
&quot;法人／無記名China&quot;, &quot;China,中国,香港&quot;, 
&quot;個人／単身China&quot;, &quot;China,中国,香港&quot;, 
&quot;個人／家族China&quot;, &quot;China,中国,香港&quot;, 
&quot;法人／単身Asian&quot;, &quot;Asian,中国,香港,ベトナム,インド,インドネシア,フィリピン,カンボジア,ミャンマー,スリランカ,シンガポール,タイ,マレーシア,韓国,台湾,バングラデシュ&quot;, 
&quot;法人／家族Asian&quot;, &quot;Asian,中国,香港,ベトナム,インド,インドネシア,フィリピン,カンボジア,ミャンマー,スリランカ,シンガポール,タイ,マレーシア,韓国,台湾,バングラデシュ&quot;, 
&quot;法人／無記名Asian&quot;, &quot;Asian,中国,香港,ベトナム,インド,インドネシア,フィリピン,カンボジア,ミャンマー,スリランカ,シンガポール,タイ,マレーシア,韓国,台湾,バングラデシュ&quot;, 
&quot;個人／単身Asian&quot;, &quot;Asian,中国,香港,ベトナム,インド,インドネシア,フィリピン,カンボジア,ミャンマー,スリランカ,シンガポール,タイ,マレーシア,韓国,台湾,バングラデシュ&quot;, 
&quot;個人／家族Asian&quot;, &quot;Asian,中国,香港,ベトナム,インド,インドネシア,フィリピン,カンボジア,ミャンマー,スリランカ,シンガポール,タイ,マレーシア,韓国,台湾,バングラデシュ&quot;, 
&quot;法人／単身Asian B Plan&quot;, &quot;Asian,中国,香港,ベトナム,インド,インドネシア,フィリピン,ミャンマー,スリランカ,シンガポール,タイ,マレーシア,韓国,台湾,バングラデシュ&quot;, 
&quot;法人／家族Asian B Plan&quot;, &quot;Asian,中国,香港,ベトナム,インド,インドネシア,フィリピン,ミャンマー,スリランカ,シンガポール,タイ,マレーシア,韓国,台湾,バングラデシュ&quot;, 
&quot;法人／無記名Asian Biz Trip Plan&quot;, &quot;Asian,中国,香港,ベトナム,インド,インドネシア,フィリピン,カンボジア,ミャンマー,スリランカ,シンガポール,タイ,マレーシア,韓国,台湾,バングラデシュ&quot;, 
&quot;法人／単身&quot;,&quot;China,中国,香港&quot;, 
&quot;法人／単身Global Plus Member&quot;, &quot;Global Plus,中国,香港,ベトナム,インド,インドネシア,フィリピン,カンボジア,ミャンマー,スリランカ,シンガポール,タイ,マレーシア,韓国,台湾,バングラデシュ,メキシコ&quot;, 
&quot;法人／家族Global Plus Member&quot;, &quot;Global Plus,中国,香港,ベトナム,インド,インドネシア,フィリピン,カンボジア,ミャンマー,スリランカ,シンガポール,タイ,マレーシア,韓国,台湾,バングラデシュ,メキシコ&quot;, 
&quot;法人／単身Global Member&quot;, &quot;Global,中国,香港,ベトナム,インド,インドネシア,フィリピン,カンボジア,ミャンマー,スリランカ,シンガポール,タイ,マレーシア,韓国,台湾,バングラデシュ,メキシコ&quot;, 
&quot;法人／家族Global Member&quot;, &quot;Global,中国,香港,ベトナム,インド,インドネシア,フィリピン,カンボジア,ミャンマー,スリランカ,シンガポール,タイ,マレーシア,韓国,台湾,バングラデシュ,メキシコ&quot;, 
&quot;法人／無記名Biz Trip Pass&quot;, &quot;Biz Trip,中国,香港,ベトナム,インド,インドネシア,フィリピン,カンボジア,ミャンマー,スリランカ,シンガポール,タイ,マレーシア,韓国,台湾,バングラデシュ,メキシコ&quot;, 
&quot;法人／無記名Visitor Pass&quot;, &quot;Visitor,中国,香港,ベトナム,インド,インドネシア,フィリピン,カンボジア,ミャンマー,スリランカ,シンガポール,タイ,マレーシア,メキシコ&quot;, 
&quot;個人／単身Global Plus Member&quot;, &quot;Global Plus,中国,香港&quot;, 
&quot;個人／家族Global Plus Member&quot;, &quot;Global Plus,中国,香港&quot;, 
&quot;China,中国,香港&quot;)</formula>
        <label>WEB用サービスエリアコード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X111__c</fullName>
        <formula>CompanyKeiyakuNo__r.KeiyakuCompanyName__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>111</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yakushoku__c</fullName>
        <label>役職</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f_DateOfBirth__c</fullName>
        <formula>IF (Isnull(	staff__c), DateOfBirth__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>生年月日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>o_id__c</fullName>
        <label>o_id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sid__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>sid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>staff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>社員</label>
        <referenceTo>Shimei__c</referenceTo>
        <relationshipLabel>会員情報</relationshipLabel>
        <relationshipName>staffmember</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>test1__c</fullName>
        <formula>CASE( ServiceAreaCd__c , 
&quot;C&quot;, &quot;C&amp;V　Member&quot;, 
&quot;A&quot;, &quot;Asian Member&quot;,
&quot;&quot;)</formula>
        <label>メンバー名</label>
        <type>Text</type>
    </fields>
    <label>会員情報</label>
    <listViews>
        <fullName>A1</fullName>
        <columns>Jurisdiction__c</columns>
        <columns>ShozokuArea__c</columns>
        <columns>MemberNo__c</columns>
        <columns>NAME</columns>
        <columns>KinmuCompany__c</columns>
        <columns>KeiyakuKeitai__c</columns>
        <columns>Commodity__c</columns>
        <columns>Tanto__c</columns>
        <columns>KeiyakuNo__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>ISSA,CATHY,日賀野</value>
        </filters>
        <label>A1. 業務統括部</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>A11</fullName>
        <columns>Jurisdiction__c</columns>
        <columns>ShozokuArea__c</columns>
        <columns>MemberNo__c</columns>
        <columns>NAME</columns>
        <columns>KinmuCompany__c</columns>
        <columns>KeiyakuKeitai__c</columns>
        <columns>Commodity__c</columns>
        <columns>Tanto__c</columns>
        <columns>KeiyakuNo__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>ISSA,CATHY,日賀野</value>
        </filters>
        <label>A1. 業務統括部</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>x01</fullName>
        <columns>Jurisdiction__c</columns>
        <columns>ShozokuArea__c</columns>
        <columns>MemberNo__c</columns>
        <columns>NAME</columns>
        <columns>KinmuCompany__c</columns>
        <columns>KeiyakuKeitai__c</columns>
        <columns>Commodity__c</columns>
        <columns>Tanto__c</columns>
        <columns>KeiyakuNo__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MemberKubun__c</field>
            <operation>equals</operation>
            <value>会員</value>
        </filters>
        <label>01. すべての会員</label>
    </listViews>
    <listViews>
        <fullName>x203</fullName>
        <columns>NAME</columns>
        <columns>MemberNo__c</columns>
        <columns>KeiyakuKeitai__c</columns>
        <columns>ShozokuArea__c</columns>
        <columns>CompanyKeiyakuNo__c</columns>
        <columns>KeiyakuCompanyName__c</columns>
        <columns>KinmuCompany__c</columns>
        <columns>MankiDate__c</columns>
        <columns>MemberKubunB__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MemberKubunB__c</field>
            <operation>equals</operation>
            <value>会員</value>
        </filters>
        <filters>
            <field>Commodity__c</field>
            <operation>equals</operation>
            <value>ベトナムメディック</value>
        </filters>
        <filters>
            <field>KeiyakuKeitai__c</field>
            <operation>notEqual</operation>
            <value>社員／家族,社員／単身</value>
        </filters>
        <label>20. ベトナム会員</label>
        <sharedTo>
            <group>DeveloperName715427355313</group>
            <role>DeveloperName70583713081</role>
            <role>DeveloperName705837130813</role>
            <roleAndSubordinates>AC</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <label>会員氏名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>InsuranceCheck</fullName>
        <active>true</active>
        <errorConditionFormula>AND( isnull(TaikaiDate__c) = False,
ISPICKVAL( OtaAgency__c , &quot;WB扱い&quot;),
AND(isnull(InsuranceCancelDate__c)  = True,  ISBLANK(InsuranceCancelContact__c) = True))</errorConditionFormula>
        <errorMessage>WB扱いの保険に加入していますので、必ず保険契約地に連絡してください！！！！！</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mukimei_Check_Asian</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  OR(ServiceKeitaiCd__c  = &quot;MA&quot;,ServiceKeitaiCd__c  = &quot;MB&quot;,ServiceKeitaiCd__c  = &quot;MABiz&quot;)   , CountryCodes__c  = &quot;CHN&quot;)</errorConditionFormula>
        <errorDisplayField>KeiyakuKeitai__c</errorDisplayField>
        <errorMessage>この契約形態を選択することはできません。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mukimei_Check_China</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ServiceAreaCd__c  = &quot;C&quot;,  AND( CountryCodes__c&lt;&gt;&quot;JPN&quot;, CountryCodes__c&lt;&gt;&quot;CHN&quot;, CountryCodes__c&lt;&gt;&quot;HKG&quot; ) )</errorConditionFormula>
        <errorDisplayField>KeiyakuKeitai__c</errorDisplayField>
        <errorMessage>この契約形態を選択することはできません。</errorMessage>
    </validationRules>
</CustomObject>